fix(toc): 🐛 fix invisible toc on desktop

--- a/resources/skins.citizen.styles/components/TableOfContents.less
+++ b/resources/skins.citizen.styles/components/TableOfContents.less
@@ -233,6 +233,7 @@
 			border-radius: 0;
 			box-shadow: none;
 			transform: none;
+			content-visibility: visible;
 
 			> * {
 				opacity: 1;
